// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SerializerService should serialize a nested object 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Root xmlns="urn:mine">
	<foo>
		<bar>foobar</bar>
	</foo>
	<baz>bazoo</baz>
</Root>"
`;

exports[`SerializerService should serialize attributes of object nodes 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<attributes xmlns="urn:mine">
	<foo baz="bazoo">
		<bar>baz</bar>
	</foo>
</attributes>"
`;

exports[`SerializerService should serialize attributes of text nodes 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<attributes xmlns="urn:mine">
	<foo baz="bazoo">bar</foo>
</attributes>"
`;
